# pfBitvectors

./: CMakeLists.txt  README.md  cpm.dependencies
.github/: dependabot.yml
.github/workflows/: ci_on_pr.yml  cron_daily.yml  cron_weekly.yml
examples/exampleBitvector/: CMakeLists.txt  main.cpp
examples/exampleStrings/: CMakeLists.txt  main.cpp
src/benchmark_pfBitvectors/: BenchSize.h  CMakeLists.txt  benchmark_bitvectors.cpp  benchmark_strings_alphabet_16.cpp  benchmark_strings_alphabet_16384.cpp  benchmark_strings_alphabet_21.cpp  benchmark_strings_alphabet_255.cpp  benchmark_strings_alphabet_4.cpp  benchmark_strings_alphabet_4096.cpp  benchmark_strings_alphabet_5.cpp  benchmark_strings_alphabet_65536.cpp
src/pfBitvectors/: AlignedBitset.h  CMakeLists.txt  pfBitvectors.h  ranges.h  ternarylogic.h  utils.h
src/pfBitvectors/bitvectors/: Bitvector.h  Bitvector1L.h  Bitvector2L.h  PairedBitvector.h  PairedBitvector1L.h  PairedBitvector2L.h
src/pfBitvectors/strings/: FlattenedBitvectors2L.h  MultiBitvector.h  PairedFlattenedBitvectors2L.h
src/pfBitvectors_externalLibsAdapter/: CMakeLists.txt  all.h
src/pfBitvectors_externalLibsAdapter/bitvectors/: Pasta_FlatRank.h  Pasta_WideRank.h  sdsl_v.h  sdsl_v5.h  sux_Rank9.h
src/pfBitvectors_externalLibsAdapter/strings/: AWFMIndex.h  Sdsl_wt_bldc.h  Sdsl_wt_epr.h
src/pfBitvectors_test_utils/: CMakeLists.txt  utils.h
src/test_header/: CMakeLists.txt  test.cpp.in
src/test_pfBitvectors/: CMakeLists.txt  test_bitvectors.cpp  test_strings.cpp  utils.h
